task created using modal

--- a/app/assets/stylesheets/project.scss
+++ b/app/assets/stylesheets/project.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Project controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.project-box {
+	padding-left: 260px;
+}
+
+.pure-form {
+	color: black;
+}
+
+.react-modal{
+	text-indent: 50px;
+}
