--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,3 @@
-<%= react_component('HomeIndex') %>
+<%= react_component('HomeIndex', 
+					{:imgSrc => image_path("trackPic.jpg")},
+					{ prerender: true}) %>
